corpus/c/macro_include/case-12/snapshots/gcc15/render.ci.txt
src/main.c:9:12: error: error surfaced through macro/include context
help: inspect the user-owned macro invocation or include edge that reaches the failing line
why: 'Counter' has no member named 'count'
| src/main.c:9:12
|     return OUTER_ACCESS(counter);
|            ^
through macro expansion:
  - src/main.c:9:12 in expansion of macro 'OUTER_ACCESS'
  - src/config.h:2:29 in expansion of macro 'INNER_ACCESS'
from include chain:
  - In file included from src/wrapper.h:1
  - src/main.c:1 from src/main.c:1:
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output